--- a/zj-olap/grails-app/i18n/messages_zh_CN.properties
+++ b/zj-olap/grails-app/i18n/messages_zh_CN.properties
@@ -16,6 +16,8 @@ default.not.unique.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u7684\u503C[{2}]\u
 default.null.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u4E0D\u80FD\u4E3Anull
 default.paginate.next=\u4E0B\u9875
 default.paginate.prev=\u4E0A\u9875
+default.boolean.false=否
+default.boolean.true=是
 
 application.name=计量督导应用平台
 default.edit.label=修改 {0}
@@ -141,7 +143,7 @@ customerType.label=销售类别
 customerType.name.label=名称
 
 
-customerTypeLevel2.label=机构类型
+customerTypeLevel2.label=机构类型 
 customerTypeLevel2.name.label=名称
 
 
@@ -265,7 +267,7 @@ price.from.label=执行时间
 price.price.label=价格
 price.type.label=油品名称
 
-customerVistingType.label=客户拜访形式
+customerVistingType.label=回访方式
 customerVistingType.name.label=形式
 customerVistingType.description.label=说明
 
